--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Converters\DataTypeConverter.cs" />
     <Compile Include="Converters\EnumDescriptionConverter.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Helper\CSVFileParser.cs" />
+    <Compile Include="Helper\FileParserBase.cs" />
+    <Compile Include="Helper\IFileParser.cs" />
     <Compile Include="Helper\IProcessManager.cs" />
     <Compile Include="Helper\ProcessManager.cs" />
     <Compile Include="Scrobbling\Data\ArtistResultViewModel.cs" />
