--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -277,7 +277,6 @@
     <Compile Include="ExtraFunctions\CollageCreatorViewModel.cs" />
     <Compile Include="ExtraFunctions\CSVDownloaderViewModel.cs" />
     <Compile Include="ExtraFunctions\ExtraFunctionsViewModel.cs" />
-    <Compile Include="ExtraFunctions\ExtraFunctionViewModelBase.cs" />
     <Compile Include="ExtraFunctions\MilestoneCheckerViewModel.cs" />
     <Compile Include="ExtraFunctions\PasteYourTasteViewModel.cs" />
     <Compile Include="Configuration\GeneralSettingsViewModel.cs" />
@@ -300,6 +299,7 @@
     <Compile Include="Scrobbling\Data\ScrobbleViewModel.cs" />
     <Compile Include="SystemTrayViewModel.cs" />
     <Compile Include="Login\UserViewModel.cs" />
+    <Compile Include="TabViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ExtraFunctions\CollageCreatorView.xaml.cs">
       <DependentUpon>CollageCreatorView.xaml</DependentUpon>
